@@ -1,3 +1,8 @@
+2016-02-09  Benno Schulenberg  <bensberg@justemail.net>
+	* src/files.c (stat_with_alloc, open_buffer, write_file): Check the
+	result of a stat() to avoid referencing unitialized data.  Original
+	patch was by Kamil Dudka.
+
 2016-02-07  Benno Schulenberg  <bensberg@justemail.net>
 	* src/files.c (update_poshistory): Don't put files in the history list
 	when they have the default cursor position (line 1, column 1).
